!1399 fix(#I3PXMV): resolve Menu UI render on small screen * feat: 增加鼠标悬停展开效果 * style: 微调侧边栏菜单样式 * style: 更新样式 * refactor: 移除 Layout 火柴棍效果 * refactor: 更新  Layout.razor.css 文件 * refactor: 更新 Menu.razor.css * Merge branch 'dev' into dev-menu * scripts: 更新 collapse 下脚本 * style: 更新 collapse 下样式

--- a/src/BootstrapBlazor/Components/Layout/Layout.razor.cs.css
+++ b/src/BootstrapBlazor/Components/Layout/Layout.razor.cs.css
@@ -210,10 +210,14 @@
         box-shadow: 0 14px 28px rgba(0,0,0,.25),0 10px 10px rgba(0,0,0,.22);
     }
 
-        .layout.is-page .layout-side.is-collapsed,
-        .layout.is-page .layout-side .menu.is-vertical.is-collapsed {
-            width: 70px;
+        .layout.is-page .layout-side:not(:hover) .menu.is-vertical {
+            width: 100%;
         }
+
+            .layout.is-page .layout-side.is-collapsed:not(:hover),
+            .layout.is-page .layout-side:not(:hover) .menu.is-vertical.is-collapsed {
+                width: 70px;
+            }
 
         .layout.is-page .layout-side.is-fixed-header {
             position: sticky;
@@ -288,17 +292,6 @@
 
     .layout.is-page .layout-footer.is-collapsed {
         display: flex;
-    }
-
-    .layout.is-page .layout-menu .menu.is-vertical .nav-link:before {
-        content: "";
-        position: absolute;
-        left: 0;
-        top: 0;
-        bottom: 0;
-        width: 2px;
-        opacity: 0;
-        transition: background-color .3s linear, opacity .3s linear;
     }
 
     .layout.is-page .layout-menu .menu.is-vertical.is-collapsed .nav-link.active::before {
